--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.h2.console.path = /h2-console
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
-spring.datasource.url = jdbc:h2:~/test
+spring.datasource.url = jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name = org.h2.Driver
