--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
+
+
 	</parent>
 
 	<properties>
@@ -25,9 +27,40 @@
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.0.3</spring-boot-admin.version>
 		<vaadin.version>10.0.5</vaadin.version>
+		<flow.component.base.version>1.2.0.beta1</flow.component.base.version>
+		<flow.version>1.2.0.beta2</flow.version>
 	</properties>
 
+
+		<repositories>
+			<repository>
+				<id>webjars</id>
+				<url>https://dl.bintray.com/webjars/maven</url>
+			</repository>
+
+				<repository>
+					<id>vaadin-prereleases</id>
+					<url>https://maven.vaadin.com/vaadin-prereleases/</url>
+				</repository>
+
+				<repository>
+					<id>vaadin-addons</id>
+					<url>http://maven.vaadin.com/vaadin-addons</url>
+				</repository>
+
+			<repository>
+				<id>local-maven-repo</id>
+				<url>file:///${project.basedir}/local-maven-repo</url>
+			</repository>
+		</repositories>
+
 	<dependencies>
+        <dependency>
+            <groupId>ru.xenya</groupId>
+            <artifactId>confirm-dialog</artifactId>
+			<version>1.0-beta</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
@@ -110,28 +143,156 @@
 			<version>2.1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>flow-server</artifactId>
+			<version>${flow.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.vaadin.webjar</groupId>
+			<artifactId>vaadin-confirm-dialog</artifactId>
+			<version>1.0.0-beta1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.webjars.bowergithub.vaadin</groupId>
+					<artifactId>vaadin-button</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.webjars.bowergithub.vaadin</groupId>
+					<artifactId>vaadin-dialog</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymer</groupId>
+			<artifactId>polymer</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.webcomponents</groupId>
+			<artifactId>webcomponentsjs</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.webcomponents</groupId>
+			<artifactId>shadycss</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-element-mixin</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-usage-statistics</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-development-mode-detector</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-themable-mixin</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-lumo-styles</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-button</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-control-state-mixin</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-dialog</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.vaadin</groupId>
+			<artifactId>vaadin-overlay</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-icon</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-meta</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-iconset-svg</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-overlay-behavior</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-a11y-keys-behavior</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-fit-behavior</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bowergithub.polymerelements</groupId>
+			<artifactId>iron-resizable-behavior</artifactId>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>2.0.4.RELEASE</version>
 		</dependency>
+
+
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>vaadin-prereleases</id>
-			<url>https://maven.vaadin.com/vaadin-prereleases/</url>
-		</repository>
 
-		<repository>
-			<id>vaadin-addons</id>
-			<url>http://maven.vaadin.com/vaadin-addons</url>
-		</repository>
-	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>vaadin-prereleases</id>
+			<url>http://maven.vaadin.com/vaadin-prereleases</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+					<groupId>com.vaadin</groupId>
+					<artifactId>flow-component-base</artifactId>
+					<version>${flow.component.base.version}</version>
+					<type>pom</type>
+					<scope>import</scope>
+				</dependency>
+
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
