--- a/pom.xml
+++ b/pom.xml
@@ -138,17 +138,17 @@
 			<version>2.1.3</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.vaadin</groupId>
-			<artifactId>flow-server</artifactId>
-			<version>${flow.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.vaadin</groupId>-->
+			<!--<artifactId>flow-server</artifactId>-->
+			<!--<version>${flow.version}</version>-->
+		<!--</dependency>-->
 
-        <dependency>
-            <groupId>org.claspina</groupId>
-            <artifactId>confirm-dialog</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.claspina</groupId>-->
+            <!--<artifactId>confirm-dialog</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
 
 		<!--<dependency>-->
 			<!--<groupId>com.vaadin.webjar</groupId>-->
@@ -286,13 +286,13 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-					<groupId>com.vaadin</groupId>
-					<artifactId>flow-component-base</artifactId>
-					<version>${flow.component.base.version}</version>
-					<type>pom</type>
-					<scope>import</scope>
-				</dependency>
+			<!--<dependency>-->
+					<!--<groupId>com.vaadin</groupId>-->
+					<!--<artifactId>flow-component-base</artifactId>-->
+					<!--<version>${flow.component.base.version}</version>-->
+					<!--<type>pom</type>-->
+					<!--<scope>import</scope>-->
+				<!--</dependency>-->
 
 			<dependency>
 				<groupId>com.vaadin</groupId>
