изменила generatedvalue в AbstractEntity работает диалог подтверждения добавлена колонка в таблицу прайсов, локализация datepicker, реализована функция при добавлении нового прайса другие прайсы делать недефолтными

--- a/src/main/resources/static/manifest.json
+++ b/src/main/resources/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "###Bakery###",
-  "short_name": "###Bakery###",
+  "name": "###Market###",
+  "short_name": "###Market###",
   "start_url": "login",
   "display": "standalone",
   "theme_color": "#227aef",
