--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -160,14 +165,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!--<dependency>-->
-					<!--<groupId>com.vaadin</groupId>-->
-					<!--<artifactId>flow-component-base</artifactId>-->
-					<!--<version>${flow.component.base.version}</version>-->
-					<!--<type>pom</type>-->
-					<!--<scope>import</scope>-->
-				<!--</dependency>-->
-
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
@@ -190,30 +187,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<outputDirectory>
-						${project.build.directory}/lib/
-					</outputDirectory>
-					<overWriteReleases>false</overWriteReleases>
-					<overWriteSnapshots>false</overWriteSnapshots>
-					<overWriteIfNewer>true</overWriteIfNewer>
-				</configuration>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+
 		</plugins>
 	</build>
 
