--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
 server.tomcat.uri-encoding=UTF-8
 spring.jackson.serialization.write_dates_as_timestamps=false
+
+#SECURITY
+security.basic.realm=Market
