--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.h2.console.path = /h2-console
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
-spring.datasource.url = jdbc:h2:~/test;
+spring.datasource.url = jdbc:h2:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name = org.h2.Driver
@@ -21,3 +21,9 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 
 #SECURITY
 security.basic.realm=Market
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+server.session.timeout= 60400 # Session timeout in seconds.
+spring.session.jdbc.schema=org/springframework/session/jdbc/schema-h2.sql # Path to the SQL file to use to initialize the database schema.
