--- a/pom.xml
+++ b/pom.xml
@@ -163,9 +163,14 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>2.0.4.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-radio-button-flow</artifactId>
+            <version>1.0.3</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 
 
