--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.0.3</spring-boot-admin.version>
-		<vaadin.version>10.0.5</vaadin.version>
+		<vaadin.version>10.0.8</vaadin.version>
 		<flow.component.base.version>1.2.0.beta1</flow.component.base.version>
 		<flow.version>1.2.0.beta2</flow.version>
 	</properties>
@@ -170,16 +170,12 @@
         </dependency>
 
 		<dependency>
-			<groupId>org.vaadin.addons</groupId>
-			<artifactId>vaadin-combobox-multiselect</artifactId>
-			<version>2.6</version>
+			<groupId>org.github.legioth</groupId>
+			<artifactId>field</artifactId>
+			<version>0.10.0.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.vaadin.pekka</groupId>
-			<artifactId>checkbox-group-java</artifactId>
-			<version>1.0.0.beta1</version>
-		</dependency>
+
 
     </dependencies>
 
