add validation new order item reformat code lazy fetch history

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -3,6 +3,6 @@ market.status.required = choose a status
 market.due.dueDate.required = choose a due date
 market.payment.required = choose a payment
 market.price.required = choose a price
-market.quantity.required = more then 1
+market.quantity.required = больше, чем 1
 market.price.limits = сумма должна быть больше 0
 javax.validation.constraints.Size.message = maximum length is {max} characters
