--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.driver-class-name = org.h2.Driver
 
 # Comment out if using anything else than H2 (e.g. MySQL or PostgreSQL)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
 server.compression.enabled=true
@@ -27,3 +28,11 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 server.session.timeout= 60400 # Session timeout in seconds.
 spring.session.jdbc.schema=org/springframework/session/jdbc/schema-h2.sql # Path to the SQL file to use to initialize the database schema.
+
+
+
+#vaadin.productionMode=true
+#vaadin.original.frontend.resources=true
+#vaadin.heartbeatInterval=300
+#
+#vaadin.closeIdleSessions=true
