--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,20 @@ spring.h2.console.path = /h2-console
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.open-in-view=false
 
 spring.datasource.url = jdbc:h2:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name = org.h2.Driver
+spring.jpa.properties.hibernate.format_sql=true
 
 # Comment out if using anything else than H2 (e.g. MySQL or PostgreSQL)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 
 server.compression.enabled=true
